| Summary: | ASTERISK-25141: pjsip_options: Contact reference leak | ||
| Reporter: | Corey Farrell (coreyfarrell) | Labels: | |
| Date Opened: | 2015-05-29 12:38:29 | Date Closed: | 2017-10-16 09:20:49 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Core/Sorcery |
| Versions: | SVN | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) pjsip-dialplan_functions-pjsip_aor.txt ( 1) pjsip-location-leak.patch ( 2) pjsip-qualify-auth.txt ( 3) qualify-basic.txt ( 4) refs.txt | |
| Description: | While running the testsuite with REF_DEBUG enabled I found that many tests produced a leak that appears to be from pjsip_options. | ||
| Comments: | By: Corey Farrell (coreyfarrell) 2015-05-29 12:44:13.297-0500 This refs.txt was created with one modification to latest master. I added REF_DEBUG parameters to {{ast_sorcery_generic_alloc}}, so {{res_pjsip/pjsip_options.c:71 contact_status_alloc}} is the caller of ast_sorcery_generic_alloc. By: Corey Farrell (coreyfarrell) 2015-05-30 20:34:10.426-0500 I found another contact reference leak in pjsip_configuration. By: Corey Farrell (coreyfarrell) 2015-06-09 06:54:39.381-0500 tests/channels/pjsip/dialplan_functions/pjsip_aor and tests/channels/pjsip/qualify/auth are still leaking, I think this might be the last of them. By: Corey Farrell (coreyfarrell) 2017-10-16 09:20:49.467-0500 From what I can tell this issue has been fixed. | ||